# Voice-recording-and-insights-app

./: .gitignore  AGENT.md  ARCHITECTURE.md  COROUTINES.md  KOIN_SETUP.md  PHASE_4_REVIEW.md  TESTING_GUIDE.md  TIMESTAMP_FORMAT.md  TRANSCRIPTION_PLAN.md  TRANSCRIPTION_PLAN_SQLDELIGHT.md  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/cpp/: CMakeLists.txt  whisper_jni.cpp
composeApp/src/androidMain/kotlin/org/example/project/: AndroidApp.kt  App.android.kt  BaseActivity.kt  MainActivity.kt
composeApp/src/androidMain/kotlin/org/example/project/di/: AndroidModule.kt
composeApp/src/androidMain/kotlin/org/example/project/transcription/: AudioDecoder.kt  ModelManager.kt  TranscriptionHandler.kt  WhisperContext.kt
composeApp/src/androidMain/kotlin/org/example/project/ui/: RecordingScreen.kt
composeApp/src/androidMain/kotlin/org/example/project/util/: FileSystemHelper.android.kt  TimeUtils.android.kt
composeApp/src/androidMain/kotlin/org/example/project/voicerecorder/: AudioRecorder.android.kt  TimestampUtils.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/org/example/project/: App.kt
composeApp/src/commonMain/kotlin/org/example/project/data/: AppDatabase.kt  InMemoryDatabase.kt  RecordingRepository.kt  RecordingRepositoryImpl.kt
composeApp/src/commonMain/sqldelight/org/example/project/: Recording.sqldelight
composeApp/src/iosMain/kotlin/org/example/project/: App.ios.kt  MainViewController.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
(+17 files in other folders)
